updated openapi Spec updated response for listpolicy to be camelCase updated request for create policy to jsonObject from jsonArray updated request for delete policy to jsonObject from jsonArray
